Fixed flickering glitch #696

--- a/media/css/global/main.css
+++ b/media/css/global/main.css
@@ -84,7 +84,6 @@ html {
     margin: 0px;
     position: relative;
     width: 45px;
-    height: 55px;
 	line-height: 11px;
 	padding: 6px;
     float: right;
