--- a/media/css/minimalistic_language_picker.css
+++ b/media/css/minimalistic_language_picker.css
@@ -21,7 +21,6 @@
 	margin-bottom: 4px;
 	margin-top: 0px;
     position: relative;
-	height: 55px;
 	width: 150px;
 	background-color: white;
 	line-height: 11px;
